crates/decorous-backend/src/dom_render/snapshots/decorous_backend__dom_render__tests__reactive_css_applies_to_root_element.snap
---
source: crates/decorous-backend/src/dom_render/mod.rs
expression: "String::from_utf8(out).unwrap()"
---
const dirty = new Uint8Array(new ArrayBuffer(1));
function create_main_block(target, anchor) {
function mount(target, newNode, anchor) {
target.insertBefore(newNode, anchor || null);
}
target.setAttribute("style", `--decor-0: ${ctx[0]}; `);
return {
u(dirty) {
if (dirty[0] & 1) target.setAttribute("style", `--decor-0: ${ctx[0]}; `);
},
d() {
}
};
}
function __init_ctx() {
let color = "red";
return [color];
}
const ctx = __init_ctx();
const fragment = create_main_block(document.getElementById("test"));
let updating = false;
function __schedule_update(ctx_idx, val) {
ctx[ctx_idx] = val;
dirty[Math.max(Math.ceil(ctx_idx / 8) - 1, 0)] |= 1 << (ctx_idx % 8);
if (updating) return;
updating = true;
Promise.resolve().then(() => {
fragment.u(dirty);
updating = false;
dirty.fill(0);
});
}

